# python_template

./: .dockerignore  .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: lint-check.sh  lint.sh  start.sh  test.sh  wait-for-service.sh
