[project]
name = "starwars"
requires-python = ">=3.10"

[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
mypy = "^0.991"
isort = "^5.11.4"
pytest = "^7.2.0"
coverage = "^7.0.1"


[tool.black]
line-length = 120
target-version = ['py310']


[tool.isort]
profile = "black"


[tool.mypy]
exclude = 'migrations'
strict = true
# disable strict flags
ignore_missing_imports = true
disallow_subclassing_any = false
warn_return_any = false
ignore_errors = true


[tool.coverage.report]
omit = [
    "*/tests/*",
]


[tool.autoflake]
exclude = [
    'venv',
    '.venv'
]
